Colab을 통해 생성됨

--- a/9조 /202213217 박우진/5주차_문제.ipynb
+++ b/9조 /202213217 박우진/5주차_문제.ipynb
@@ -11,12 +11,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "yTW1hncaahH_"
+        "id": "yTW1hncaahH_",
+        "outputId": "8c2ef3ee-39f3-4a91-827d-cda2f65dbf09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름을 입력하세요twoo pac\n",
+            "안녕하세요, twoo pac님!\n"
+          ]
+        }
+      ],
+      "source": [
+        "a = str(input(\"이름을 입력하세요\"))\n",
+        "print(f\"안녕하세요, {a}님!\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -42,12 +58,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "4n_OC8w5bq22"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# write_data.py\n",
+        "f = open(r\"C:\\Users\\우진\\Documents\\note.txt\", 'w')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -60,12 +79,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "Y8KU5GRqbrg-"
+        "id": "Y8KU5GRqbrg-",
+        "outputId": "bc1a0ddf-586f-401f-9ece-d0db1665ca66",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "unexpected indent (<ipython-input-20-d5e636249e35>, line 8)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-d5e636249e35>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    if not line: break\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ],
+      "source": [
+        "# readline_all.py\n",
+        "f = open(r\"C:\\Users\\우진\\Documents\\note.txt\", 'r')\n",
+        "while True:\n",
+        "    line = f.readline()\n",
+        "    if not line: break\n",
+        "    print(line)\n",
+        "f.close()\n",
+        "    if not line: break\n",
+        "    print(line)\n",
+        "f.close()"
+      ]
     },
     {
       "cell_type": "markdown",
