Colab을 통해 생성됨

--- a/9조 /202213217 박우진/5주차_문제.ipynb
+++ b/9조 /202213217 박우진/5주차_문제.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "yTW1hncaahH_",
         "outputId": "8c2ef3ee-39f3-4a91-827d-cda2f65dbf09",
@@ -58,14 +58,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "metadata": {
-        "id": "4n_OC8w5bq22"
+        "id": "4n_OC8w5bq22",
+        "outputId": "973eecd2-b0f9-455f-d1b8-eaa3f0d9d95d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (<ipython-input-6-a03742a7330d>, line 5)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-a03742a7330d>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    f = open(\"C:\\Users\\우진\\Documents\\note.txt\", 'w')\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+          ]
+        }
+      ],
       "source": [
-        "# write_data.py\n",
-        "f = open(r\"C:\\Users\\우진\\Documents\\note.txt\", 'w')"
+        "a=input(\"문장을 입력하세요\")\n",
+        "b=input(\"문장을 입력하세요\")\n",
+        "c=input(\"문장을 입력하세요\")\n",
+        "print(\"파일 저장 완료!\")\n",
+        "f = open(\"C:\\Users\\우진\\Documents\\note.txt\", 'w')\n",
+        "    f.write(a)\n",
+        "    f.write(b)\n",
+        "    f.write(c)\n",
+        "f.close()"
       ]
     },
     {
@@ -79,35 +100,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 2,
       "metadata": {
         "id": "Y8KU5GRqbrg-",
-        "outputId": "bc1a0ddf-586f-401f-9ece-d0db1665ca66",
+        "outputId": "78f424eb-6438-41d7-ef58-86b7e9fa9ccd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 110
+          "height": 124
         }
       },
       "outputs": [
         {
           "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "unexpected indent (<ipython-input-20-d5e636249e35>, line 8)",
+          "ename": "SyntaxError",
+          "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (<ipython-input-2-73ee8ad41b2e>, line 2)",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-d5e636249e35>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    if not line: break\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-73ee8ad41b2e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    f = open(\"C:\\Users\\우진\\Documents\\note.txt\", 'r')\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
           ]
         }
       ],
       "source": [
-        "# readline_all.py\n",
-        "f = open(r\"C:\\Users\\우진\\Documents\\note.txt\", 'r')\n",
-        "while True:\n",
-        "    line = f.readline()\n",
-        "    if not line: break\n",
-        "    print(line)\n",
-        "f.close()\n",
-        "    if not line: break\n",
-        "    print(line)\n",
+        "\n",
+        "f = open(\"C:\\Users\\우진\\Documents\\note.txt\", 'r')\n",
         "f.close()"
       ]
     },
@@ -131,12 +145,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "07pDcadKbtzq"
+        "id": "07pDcadKbtzq",
+        "outputId": "8f6d48a0-aa75-4926-9aeb-da229d0d2066",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-f\n",
+            "/root/.local/share/jupyter/runtime/kernel-22e95b77-03b8-4f44-b6bc-ee3960b85507.json\n"
+          ]
+        }
+      ],
+      "source": [
+        "import sys\n",
+        "\n",
+        "args = sys.argv[1:]\n",
+        "for i in args:\n",
+        "    print(i)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -172,7 +205,9 @@
         "id": "NgMsmjeNbuz6"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "class student:"
+      ]
     },
     {
       "cell_type": "markdown",
